# TalentFlow

./: .env.example  .gitignore  ATS_CODEBASE_ANALYSIS.md  AUTH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.yml  test_scoring.sh
server/: pyproject.toml
server/.run/: talentflow.sqlite  turso-cache.db-info  turso-cache.db-shm  turso-cache.db-wal
server/app/: README.md  __init__.py  celery_app.py  chroma_client.py  ingest.py  main.py  models.py  models_registry.py  storage.py  tasks.py  worker.py
server/app/agents/: ats_comparison.py  ats_formatter.py  bullet_optimizer.py  embedder.py  feedback_loop.py  parser_agent.py  resume_generator.py  retriever.py  scorer.py  skill_normalizer.py
server/app/ai/: agent.py
server/app/routers/: __init__.py  agents.py  agents_v1.py  ats.py  auth.py  crawl.py  extract.py  extraction_test.py  generate.py  jd.py  keywords.py  library.py  pipelines.py  pipelines_v2.py  qa.py  rapidapi_jobs.py  resume.py  scoring.py
server/app/tests/: test_ats_formatter.py  test_bullet_optimizer.py  test_embedder.py  test_feedback_loop.py  test_fetcher_and_ingest_ref.py  test_full_agents_pipeline.py  test_ingest.py  test_models_registry.py  test_parser_agent.py  test_pipelines_v2_upload.py  test_resume_generator.py  test_retriever.py  test_routers_agents.py  test_scorer.py  test_skill_normalizer.py
server/app/utils/: __init__.py  advanced_extractor.py  advanced_fetch.py  ai_extractor.py  antibot.py  contracts.py  extractor.py  fetcher.py  (+18 more)
server/talentflow_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+176 files in other folders)
